--- a/server/app/style.css
+++ b/server/app/style.css
@@ -4,7 +4,6 @@
     width: 40%;
     height: 100%;
     position: absolute;
-
 }
 
 img {
@@ -26,6 +25,11 @@ h2 {
     padding-top: 50px;
 }
 
+.box {
+    border-radius:10px;
+    padding:10px;
+    height: 200px;
+}
 
 @media (min-width: 600px){
     img {
