--- a/server/app/style.css
+++ b/server/app/style.css
@@ -1,4 +1,3 @@
-
 #map {
     display: block;
     width: 40%;
@@ -25,10 +24,23 @@ h2 {
     padding-top: 50px;
 }
 
+#left {
+    overflow: auto;
+}
+
 .box {
     border-radius:10px;
     padding:10px;
     height: 200px;
+    overflow: auto;
+    border:solid 1px;
+}
+
+.day {
+    border-radius:10px;
+    padding:10px;
+    height: 200px;
+    border:solid 1px;
 }
 
 @media (min-width: 600px){
