--- a/server/app/style.css
+++ b/server/app/style.css
@@ -3,13 +3,22 @@ html, body{
     height: 100%;
 }
 
+#navbar{
+    min-height: 6%;
+    max-height: 6%;
+}
 #container{
+    position: absolute;
+    background-color: rgb(82, 82, 82);
+    background-position: top;
+    height: 94.5vh;
+    min-height: 25rem;
     width: 100%;
-    height: 93.4%;
+    overflow: auto;
+    bottom: 0;
 }
 
 #left {
-    background-color: rgb(156, 195, 253);
     width: 100%;
     height: 50%;
     float: left;
@@ -17,11 +26,10 @@ html, body{
 }
 
 #center {
-    background-color: rgb(241, 217, 150);
     width: 100%;
-    height: 50%;
     float: left;
     overflow:auto;
+    position: relative;
 }
 
 #right {
@@ -35,11 +43,23 @@ html, body{
     width: 100%;
     height: 100%;
     position:relative;
+    margin-left: 7px;
 }
 
 #buttons{
     text-align: center;
-    margin:5px;
+    height: 11vh;
+}
+#buttons>button{
+    position: relative;
+    height: 39%;
+    top: 3px;
+    line-height: 20px;
+    width: 30%;
+    margin: 3px;
+    box-shadow: 3px 3px 7px;
+    font-size: 2vh;
+    overflow: hidden;
 }
 
 #days{
@@ -53,39 +73,108 @@ html, body{
 .day{
     height: 50%;
     overflow: auto;
-    border:solid 1px;
     border-radius:10px;
-    margin: 5px;
-    background-color: rgb(253, 189, 237);
-    padding: 4px;
+    margin: 7px;
+    background: rgb(230, 230, 230);
+    box-shadow: 3px 3px 7px;
 }
-.day>date{
-    font-size: 80%;
+.date{
+    position: relative;
+    padding:3px;
+    padding-left: 7px;
+    font-size: 100%;
+    font-weight: 700;
+    width: 100%;
+    background: rgb(150, 150, 150);
+    letter-spacing: 1.5px;
 }
 
 #commands{
     height: 8%;
     position: absolute;
-    background-color: brown;
     text-align: center;
+    margin: 2px;
 }
 
 #send{
-    height: 100%;
+    height:3.6vh;
+    aspect-ratio: 1/1;
     position: absolute;
+    background-image: url(./icons/save.svg);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left:7px;
+    margin-top:1px
 }
 
 #add{
     position: relative;
+    box-shadow: 3px 3px 7px;
+    float:right;
+}
+
+#museums{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(0, 168, 197);
+    border-top-style:solid;
+}
+#foods{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(158, 0, 34);
+    border-top-style:solid;
+}
+#religion{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(214, 180, 29);
+    border-top-style:solid;
+}
+#natural{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(11, 116, 28);
+    border-top-style:solid;
+}
+#architecture{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(123, 14, 138);
+    border-top-style:solid;
+}
+#accomodations{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(20, 18, 100);
+    border-top-style:solid;
+}
+
+.input_style_sm{
+    font-size: 1em;
+    background: rgb(250, 250, 250);
+    border: 0px;
+    padding: 4px 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 500;
+    color: #111;
+    letter-spacing: 1px;
+    transition: 0.2s;
+    text-align: center;
+    border-radius: 5px;
 }
 
 .info{
-    margin:10px;
-    border:solid 1px;
     border-radius:10px;
-    margin: 5px;
-    background-color: rgb(147, 238, 188);
+    margin: 3px;
     padding: 8px;
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-style:solid;
+    background-color: rgb(204, 204, 204);
+    overflow: auto;
 }
 .info>img{
     max-height: 40%;
@@ -96,9 +185,31 @@ html, body{
 }
 
 .poi{
-    border:solid 1px;
+    box-sizing: border-box;
     border-radius:5px;
-    background-color: aquamarine;
+    margin:2px;
+    height: 14%;
+    line-height: 29px;
+    font-weight: 500;
+    border-left-width: 6px;
+    border-left-style: solid;
+    padding-left: 5px;
+    background: rgb(250, 250, 250);
+}
+.poi>name{
+    position: relative;
+    width: 85%;
+    float:left;
+    overflow:hidden;
+}
+.poi>button{
+    aspect-ratio: 1/1;
+    height: 90%;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    float: right;
+    margin-right: 2px;
 }
 
 .toSend{
@@ -107,23 +218,15 @@ html, body{
 }
 
 .remove{
-    width: 24px;
-    height: 24px;
-    background-image: url(./icons/x-square-fill.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    float: right;
+    background-image: url(./icons/trash-fill.svg);
 }
 
 .clone{
-    width: 24px;
-    height: 24px;
-    background-image: url(./icons/plus-square-fill.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    float: right;
+    background-image: url(./icons/plus-lg.svg);
+}
+
+.infobtn{
+    background-image: url(./icons/info-circle-fill.svg);
 }
 
 .show{
@@ -133,18 +236,23 @@ html, body{
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 10px;
+    border-radius: 15px;
     float: right;
+    background-color: rgb(150, 150, 150);
 }
 
-.infobtn{
-    width: 24px;
-    height: 24px;
-    background-image: url(./icons/info-square-fill.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    float: right;
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: none; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 
 @media only screen and (min-width:1600px){
@@ -156,6 +264,27 @@ html, body{
     .day{ height: 25%;}
     #commands{ height: 4%;}
     #days{ height: 96%;}
+    #container{
+        height: 94%;
+        overflow: hidden;
+    }
+    .info{ height:82vh;}
+    #add{
+        position: absolute;
+        bottom: 16px;
+        right:14px;
+    }
+    .poi>button{
+        height: 90%;
+        background-size: 85%;
+    }
+    #center{
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
+        background-size: 70%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
 }
 
 @media only screen and (min-width:800px) and (max-width:1599px) {
@@ -170,4 +299,11 @@ html, body{
         float: right;
     }
     .day{ height: 50%;}
+    #container{overflow: hidden;}
+    #center{
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
+        background-size: 36%;
+        background-repeat: no-repeat;
+        background-position:bottom;
+    }
 }
