--- a/server/app/style.css
+++ b/server/app/style.css
@@ -64,10 +64,10 @@ html, body{
 }
 
 .forecast{
-    height:100%;
+    height:80%;
     position:absolute;
-    margin-right:70%;
-    
+    margin-right:85%;
+    font-size:70%
 }
 
 
@@ -104,7 +104,7 @@ html, body{
 }
 
 .poi{
-    margin-left: 30%;
+    margin-left: 15%;
     border:solid 1px;
     border-radius:5px;
     background-color: aquamarine;
