--- a/server/app/style.css
+++ b/server/app/style.css
@@ -96,11 +96,11 @@ html, body{
     position: absolute;
     height: 100%;
     aspect-ratio: 1/1;
-    transform: translate(210%,-100%);
+    transform: translate(215%,-100%);
 }
 .forecast>img{
     height: 175%;
-    transform: translateY(-18%);
+    transform: translateY(-20%);
 }
 
 .forecastPopup{
@@ -122,7 +122,7 @@ html, body{
 }
 .not_forecast>img{
     height: 100%;
-    transform: translateX(180%);
+    transform: translateX(200%);
 }
 
 .not_forecastPopup{
@@ -130,11 +130,11 @@ html, body{
     position: absolute;
     background-color: rgb(201, 201, 201);
     opacity: 0.9;
-    width: 255px;
+    width: 210px;
     padding: 4px;
     border-radius: 10px;
     z-index: 1000;
-    transform: translateX(21%);
+    transform: translateX(28%);
 }
 
 #commands{
@@ -145,7 +145,7 @@ html, body{
 }
 
 #send{
-    height:3.6vh;
+    height:3.2vh;
     aspect-ratio: 1/1;
     position: absolute;
     background-image: url(./icons/save.svg);
@@ -154,6 +154,19 @@ html, body{
     background-position: center;
     margin-left:7px;
     margin-top:1px
+}
+
+#addDay{
+    height:3.2vh;
+    aspect-ratio: 1/1;
+    position: absolute;
+    background-image: url(./icons/plus-square.svg);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left:7px;
+    margin-top:1px;
+    transform: translateX(130%)
 }
 
 #add{
@@ -295,6 +308,7 @@ html, body{
     border-radius: 15px;
     float: right;
     background-color: rgb(150, 150, 150);
+    opacity: 0.7;
 }
 
 ::-webkit-scrollbar {
