--- a/nginx/static/styles/style.css
+++ b/nginx/static/styles/style.css
@@ -1,56 +1,376 @@
-#map {
-    display: block;
-    width: 40%;
+html, body{
+    width: 100%;
     height: 100%;
+}
+
+#navbar{
+    min-height: 6%;
+    max-height: 6%;
+}
+#container{
     position: absolute;
-}
-
-img {
-    margin: auto;
-    padding: 10px;
-    display: block;
-    width: 200px;
-}
-
-h2 {
-    font-size: 1.25rem;
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-    margin-top: 0;
-}
-
-#info {
-    padding-top: 50px;
+    background-color: rgb(82, 82, 82);
+    background-position: top;
+    height: 94.5vh;
+    min-height: 25rem;
+    width: 100%;
+    overflow: auto;
+    bottom: 0;
 }
 
 #left {
+    width: 100%;
+    height: 50%;
+    float: left;
+    position: relative;
+}
+
+#center {
+    width: 100%;
+    float: left;
+    overflow:auto;
+    position: relative;
+}
+
+#right {
+    width: 100%;
+    height: 50%;
+    float:left;
+}
+
+#map {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position:relative;
+    margin-left: 7px;
+}
+
+#buttons{
+    text-align: center;
+    height: 11vh;
+}
+#buttons>button{
+    position: relative;
+    height: 39%;
+    top: 3px;
+    line-height: 20px;
+    width: 30%;
+    margin: 3px;
+    font-size: 2vh;
+    overflow: hidden;
+}
+
+#days{
+    position: absolute;
+    height: 92%;
+    width: 100%;
+    overflow: auto;
+    bottom:0;
+}
+
+.day{
+    position: relative;
+    height: 50%;
+    border-radius:10px;
+    margin: 7px;
+    
+
+
+}
+.date{
+    position: relative;
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+    padding:1px;
+    padding-left: 10px;
+    padding-right: 5px;
+    font-size: 100%;
+    font-weight: 700;
+    width: 100%;
+    background: rgb(150, 150, 150);
+    letter-spacing: 1.5px;
+    z-index: 999;
+}
+.forecast{
+    position: absolute;
+    height: 100%;
+    aspect-ratio: 1/1;
+    transform: translate(210%,-100%);
+}
+.forecast>img{
+    height: 175%;
+    transform: translateY(-18%);
+}
+
+.forecastPopup{
+    visibility: hidden;
+    position: absolute;
+    background-color: rgb(201, 201, 201);
+    opacity: 0.9;
+    width: 150px;
+    padding: 4px;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+.not_forecast{
+    position: absolute;
+    height: 100%;
+    aspect-ratio: 1/1;
+    transform: translate(210%,-100%);
+}
+.not_forecast>img{
+    height: 100%;
+    transform: translateX(180%);
+}
+
+.not_forecastPopup{
+    visibility: hidden;
+    position: absolute;
+    background-color: rgb(201, 201, 201);
+    opacity: 0.9;
+    width: 255px;
+    padding: 4px;
+    border-radius: 10px;
+    z-index: 1000;
+    transform: translateX(21%);
+}
+
+#commands{
+    height: 8%;
+    position: absolute;
+    text-align: center;
+    margin: 2px;
+}
+
+/*#send{
+    height:3.6vh;
+    aspect-ratio: 1/1;
+    position: absolute;
+    background-image: url(./icons/save.svg);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left:7px;
+    margin-top:1px
+}
+*/
+
+#add{
+    position: relative;
+    float:right;
+}
+
+#museums{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(0, 168, 197);
+    border-top-style:solid;
+}
+#foods{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(158, 0, 34);
+    border-top-style:solid;
+}
+#religion{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(214, 180, 29);
+    border-top-style:solid;
+}
+#natural{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(11, 116, 28);
+    border-top-style:solid;
+}
+#architecture{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(123, 14, 138);
+    border-top-style:solid;
+}
+#accomodations{
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-color: rgb(20, 18, 100);
+    border-top-style:solid;
+}
+
+.input_style_sm{
+    font-size: 1em;
+    background: rgb(250, 250, 250);
+    border: 0px;
+    padding: 4px 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 500;
+    color: #111;
+    letter-spacing: 1px;
+    transition: 0.2s;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.info{
+    border-radius:10px;
+    margin: 3px;
+    padding: 8px;
+    box-sizing: border-box;
+    border-top-width: 5px;
+    border-top-style:solid;
+    background-color: #212529;
+    color:white;
     overflow: auto;
 }
-
-.box {
-    border-radius:10px;
-    padding:10px;
-    height: 200px;
-    overflow: auto;
-    border:solid 1px;
+.info>img{
+    max-height: 40%;
+    border-radius: 7px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
-.day {
-    border-radius:10px;
-    padding:10px;
-    height: 200px;
-    border:solid 1px;
+.poi{
+    position: relative;
+    box-sizing: border-box;
+    border-radius:5px;
+    margin:2px;
+    height: 14%;
+    line-height: 29px;
+    font-weight: 500;
+    border-left-width: 6px;
+    border-left-style: solid;
+    padding-left: 5px;
+    background: rgb(250, 250, 250);
+    vertical-align: middle;
+    font-size: 120%;
+}
+.poi>button{
+    aspect-ratio: 1/1;
+    height: 90%;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    float: right;
+    margin-right: 2px;
+    vertical-align: middle;
+}
+.name{
+    position: absolute;
+    height: 0px;
+    width: 80%;
+    top:-1px;
+    overflow:clip;
+    overflow-clip-margin: 30px;
+    text-overflow: ellipsis;
+
 }
 
-@media (min-width: 600px){
-    img {
-        margin: auto;
-        padding: 10px;
-        display: block;
-        width: 400px;
+.toSend{
+    border:solid 1px;
+    border-radius:5px;
+}
+
+.remove{
+    background-image: url(./icons/trash-fill.svg);
+}
+
+.clone{
+    background-image: url(./icons/plus-lg.svg);
+}
+
+.infobtn{
+    background-image: url(./icons/info-circle-fill.svg);
+}
+
+.show{
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-image: url(./icons/eye-fill.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 15px;
+    float: right;
+    background-color: rgb(150, 150, 150);
+}
+
+.w-icon{
+    max-width: 30px;
+    min-width: 30px;
+}
+.w-icon2{
+    max-width: 40px;
+    min-width: 40px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: none; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+@media only screen and (min-width:1600px){
+    #left, #center, #right{
+        width: 33.33%;
+        height: 100%;
+        float: right;
     }
-    .mapboxgl-popup {
-        max-width: 500px !important;
+    .day{ height: 25%;}
+    #commands{ height: 4%;}
+    #days{ height: 96%;}
+    #container{
+        height: 94%;
+        overflow: hidden;
     }
+    .info{ height:82vh;}
+    #add{
+        position: absolute;
+        bottom: 16px;
+        right:14px;
+    }
+    .poi>button{
+        height: 90%;
+        background-size: 85%;
+    }
+    #center{
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
+        background-size: 70%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+}
+
+@media only screen and (min-width:800px) and (max-width:1599px) {
+    #left, #center {
+        width: 50%;
+        height: 50%;
+        float: left;
+    }
+    #right{
+        width: 100%;
+        height: 50%;
+        float: right;
+    }
+    .day{ height: 50%;}
+    #container{overflow: hidden;}
+    #center{
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
+        background-size: 36%;
+        background-repeat: no-repeat;
+        background-position:center;
+    }
+    .info{ height:35.5vh;}
 }
