--- a/node/src/views/form.ejs
+++ b/node/src/views/form.ejs
@@ -1,38 +1,265 @@
-
 <!DOCTYPE html>
-<html>
-		<head>
-			<link href="../libraries/bootstrap.min.css" rel="stylesheet" >
-			<BASE href="/">
-		</head>
-		<body>
-			
-		<p>user: <%=username%>.</p>
-		<div class="container">
-			<h1 class="text-center mt-3 mb-3">Trip Planner</h1>
-			<div class="card">
-				<div class="card-header">Start Plannning !</div>
-				<div class="card-body">
-					<form method="POST" action="./">
-						<div class="mb-3">
-							<label>Data inizio Viaggio</label>
-							<input type="date" name="inizio_viaggio" id="inizio_viaggio" class="form-control" />
-						</div>
-						<div class="mb-3">
-							<label>Data fine viaggio</label>
-							<input type="date" name="fine_viaggio" id="fine_viaggio" class="form-control" />
-						</div>
-						<div class="mb-3">
-		                	<label>Località da visitare</label>
-		                	<input type="text" name="localita" id="localita" class="form-control" />
-		                </div>
-		                <div class="mb-3">
-		                	<input type="submit" name="submit_button" class="btn btn-primary" value="Add" />
-		                </div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</body>
+<html lang="en">
+    <head>
+        <title>Home</title>
+		<BASE href="/">
+	    <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="../libraries/bootstrap.min.css" rel="stylesheet">
+        <script src="../libraries/bootstrap.min.js"></script>
+        <script src="../libraries/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/285899448d.js" crossorigin="anonymous"></script>
 
+        <link rel="stylesheet" href="../styles/style_form.css">
+    </head>
+    <body class="bg-dark">
+        
+        <nav class="navbar navbar-expand fixed-top bg-dark justify-content-center">
+            <div class="container-fluid">
+                <a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"><%=username%></a>
+                        <ul class="dropdown-menu bg-black">
+                            <li>
+                                <div class="dropdown-item card bg-dark text-white">
+                                    <div class="card-header">
+                                        <h4 class="card-title"><%=username%></h4>
+                                        <p class="card-text"><%=email%></p>
+                                    </div>
+                                    <div class="card-body d-grid gap-3">
+                                        <button type="button" class="btn btn-primary btn-block">Settings</button>
+                                        <button type="button" class="btn btn-primary btn-block">Log out</button>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+
+    	<div class="content">
+
+    	    <div class="overlay"></div>
+		
+    	    <img class="background_image" src="../media/form_images/image.png">
+		
+    	    <div class="container d-flex justify-content-center h-100">
+			
+    	        <div class=" text-white">
+				
+    	            <form action="../testing" method="GET" id="form">
+					
+    	                <div class="row my-5">
+						
+    	                </div>
+    	                <div class="row align-items-center mx-2">
+						
+						
+    	                    <div class="col-xl d-flex justify-content-center align-items-center">
+    	                        <div class="my-3 text-center px-3">
+    	                            <div>
+    	                                <h4 class="my-0 opacity-0">Search or Create Itineraries</h4>
+    	                            </div>
+    	                        </div> 
+    	                    </div>
+
+    	                    <div class="col-xl d-flex justify-content-center align-items-center">
+    	                        <div class="card card_menu my-3 text-center">
+    	                            <div class="card-body">
+    	                                <input class="input_style my-0" type="text" id="location" name="location" placeholder="location">
+    	                                <input class="input_style" type="text" id="days" name="days" placeholder="days">
+    	                            </div>
+    	                        </div>
+    	                    </div>
+						
+						
+						
+    	                    <div class=" col-xl d-flex justify-content-center align-items-center">
+    	                        <div class="card card_menu bg-opacity-10  my-3 text-center" >
+    	                            <div class="card-body">
+    	                                <fieldset>
+    	                                    <button type="button"  class="tag" id="architecture" style="margin-top: 0px;">
+    	                                        <input type="checkbox" name="architecture" hidden>
+    	                                        <i class="fa-solid fa-archway"></i>
+    	                                    </button>
+    	                                    <button type="button"  class="tag" id="cultural" style="margin-top: 0px;">
+    	                                        <input type="checkbox"  name="cultural" hidden>
+    	                                        <i class="fa-solid fa-book-open"></i>
+    	                                    </button>
+    	                                    <button type="button"  class="tag" id="historical" style="margin-top: 0px;">
+    	                                        <input type="checkbox" name="historical" hidden>
+    	                                        <i class="fa-solid fa-monument"></i>
+    	                                    </button><br>
+										
+    	                                    <button type="button"  class="tag" id="natural">
+    	                                        <input type="checkbox"  name="natural" hidden>
+    	                                        <i class="fa-solid fa-tree"></i>
+    	                                    </button>
+										
+    	                                    <button type="button" class="tag" id="religion">
+    	                                        <input type="checkbox"  name="religion" hidden>
+    	                                        <i class="fa-solid fa-hands-praying"></i>
+    	                                    </button>
+    	                                    <button type="button" class="tag_all" id="all"><i class="fa-solid fa-shuffle"></i></i></button>
+    	                                </fieldset>
+    	                            </div>
+    	                        </div>
+    	                    </div>
+
+    	                    <div class="col-xl d-flex justify-content-center align-items-center">
+    	                        <div class="my-3 text-center">
+    	                            <div class="card-body">
+    	                                <h4 class="m-0 text-uppercase" id="tag_label" style="opacity: 0;">architecture</h4>
+    	                            </div>
+    	                        </div> 
+    	                    </div>
+						
+
+    	                </div>
+
+    	                <div class="row">
+    	                    <div class="d-flex col-sm align-items-center justify-content-center">
+    	                        <div class="card card_menu text-center">
+    	                            <div class="card-body">                             
+    	                                <input class="input_style button mt-0" type="submit" value="search">   
+    	                            </div>
+    	                        </div>
+    	                    </div>
+    	                </div>
+
+    	            </form>
+				
+    	                <div class="row">
+    	                    <div class="d-flex col-sm align-items-center justify-content-center">
+    	                        <div class="card card_menu text-center">
+    	                            <div class="card-body">    
+										<a href="../planner"><button class="input_style mx-2 mb-2">new</button></a>                         
+    	                                 
+    	                            </div>
+    	                        </div>
+    	                    </div>
+    	                </div>
+					
+
+    	        </div>
+
+    	    </div>
+
+		
+    	</div>
+	
+    	<section class="bg-dark">
+		
+			<div class="d-flex align-items-center mb-5">
+				<div class="col text-center">
+					<i class="fa-solid fa fa-angle-down" style="color:white"></i>
+				</div>
+			</div> 
+
+    	    <div class="d-flex flex-column align-items-center mx-3" id="itineraries"> 
+    	   	</div>       
+	   
+    	</section>
+
+    </body>
+
+    <script>
+	var base_url = window.location.origin;
+
+        $("#all").on('click', (event)=>{
+            target = event.target;
+            target.classList.toggle("active");
+            if(target.classList.contains("active")){
+                $(".tag").trigger('click')
+            }
+            else{
+                $(".tag").trigger('click')
+            }
+        })
+        $(".tag").on('click', (event)=>{
+            target = event.target;
+            if(!target.classList.contains("tag")){
+                target = target.parentNode;
+            }
+            $(".background_image").attr("src", "../media/form_images/"+target.id+"_image.png");
+
+            if(target.classList.length == 2){
+                target.classList.remove(target.classList[1]);
+                target.childNodes[1].checked = false;
+                console.log(target.childNodes[1].value);
+            }
+            else{
+            target.classList.add("tag_color_"+ target.id);
+            target.childNodes[1].checked = true;
+            console.log(target.childNodes[1]);
+            }
+        })
+
+        $(".tag").on('mouseleave', (event)=>{
+            target = event.target;
+            if(!target.classList.contains("tag")){
+                target = target.parentNode;
+            }
+            //$(".background_image").attr("src", "images/image.png");
+            $("#tag_label").css("opacity", "0");
+        })
+
+        $(".tag").on('mouseover', (event)=>{
+            target = event.target;
+            if(!target.classList.contains("tag")){
+                target = target.parentNode;
+            }
+            $(".background_image").attr("src", "../media/form_images/"+target.id+"_image.png");
+            $("#tag_label").html(target.id);
+            $("#tag_label").css("opacity", "100");
+        })
+
+		
+		form = document.getElementById('form');
+		form.addEventListener('submit', function(event) {
+			$("#itineraries").html("");
+			event.preventDefault();
+            event.stopPropagation();
+			formData = new FormData(this);
+			const data = [...formData.entries()];
+  			const query_string = data.map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`).join('&');
+			get_url = base_url+ '/api/itineraries?'+ query_string
+			$.get(get_url, (res)=>{			
+				res.data.forEach((itinerary, i) =>{ 
+					title = itinerary.value.title;
+					author = itinerary.value.author;
+					tags = itinerary.value.tags;
+					html_tags = "";
+					for (const tag of tags) { 
+						if(tag=="architecture") html_tags+='<i class="fa-solid tag_color_architecture fa-archway"></i>';
+						else if(tag=="cultural") html_tags+='<i class="fa-solid fa-book-open tag_color_cultural"></i>'; 
+						else if(tag=="historical") html_tags+='<i class="fa-solid fa-monument tag_color_historical"></i>'; 
+						else if(tag=="natural") html_tags+='<i class="fa-solid fa-tree tag_color_natural"></i>'; 
+						else if(tag=="religion") html_tags+='<i class="fa-solid fa-hands-praying tag_color_religion"></i>'; 
+					}
+					$("#itineraries").append(`<div class="d-flex card_itinerary p-2 justify-content-between m-3">
+    	            <div class="d-flex text-start align-items-center mx-3">
+    	                <div>
+    	                    <h5 class="card-title small m-0 mb-2">${title}</h5>
+    	                    <p class="card-text small">by: ${author}</p>
+    	                </div>
+    	            </div>
+    	            <div class="text-end p-2 mx-3"  >
+							<a href="${base_url + '/planner?id=' + itinerary.id}"><button class="input_style_small mx-2 mb-2">View</button></a>
+							${html_tags}                                               
+    	            </div>
+    	        </div>`)
+				});
+			})
+
+			
+			
+
+		});
+    
+        </script>
 </html>
