--- a/node/src/views/home.ejs
+++ b/node/src/views/home.ejs
@@ -46,20 +46,21 @@
     
         <div class="content">
     
-            <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
+            
             <div class="overlay"></div>
           
-            <!-- The HTML5 video element that will create the background video on the header -->
+            
             <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
               <source src="../media/video.mp4" type="video/mp4">
             </video>
           
-            <!-- The header content -->
+            
             <div class="container h-100">
               <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
                   <h1 class="display-3">Trip Planner</h1>
                   <p class="lead mb-0">create, save and share itineraries</p>
+                  <a href="../form" class="mt-4 btn btn-primary text-uppercase">get started</a>
                 </div>
               </div>
             </div>
@@ -67,7 +68,7 @@
             
         </div>
           
-          <!-- Page section example for content below the video header -->
+          
           <section class="bg-dark">
               
             <div class="container ">
@@ -119,15 +120,15 @@
 
     <div class="content">
 
-        <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
+        
         <div class="overlay"></div>
       
-        <!-- The HTML5 video element that will create the background video on the header -->
+        
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
           <source src="../media/video.mp4" type="video/mp4">
         </video>
       
-        <!-- The header content -->
+        
         <div class="container h-100 justify-content-center ">
             <div class="h-100 row align-items-center">
                 <div class="col-sm-6 d-flex justify-content-center">
@@ -184,7 +185,7 @@
         
     </div>
       
-      <!-- Page section example for content below the video header -->
+      
       <section class="bg-dark">
           
         <div class="container ">
