--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -3,60 +3,82 @@
 <head>
     <meta charset="utf-8"/>
     <title>Progetto RC/LTW</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <script type="text/javascript" src="../libraries/jquery.min.js"></script>
+    <BASE href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../libraries/bootstrap.min.css"/>
+    <script type="text/javascript" src="../libraries/jquery.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
     <script type="text/javascript" src="https://opentripmap.io/js/directory.en.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css"/>
+    <script src="https://kit.fontawesome.com/285899448d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/style.css"/>
-    <BASE href="/">
+    
 </head>
 <body>
-    <div id="lon" data-*="<%=lon%>"></div>
-    <div id="lat" data-*="<%=lat%>"></div>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-                Trip Planner
-          </a>
+    <nav id="navbar" class="navbar navbar-expand fixed-top bg-dark justify-content-center">
+        <div class="container-fluid">
+    
+            <a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
+    
+            <ul class="navbar-nav">
+    
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
+                    <ul class="dropdown-menu bg-black">
+                        <li>
+                            <div class="dropdown-item card bg-dark text-white">
+                                <div class="card-header">
+                                    <h4 class="card-title"><%=username%></h4>
+                                    <p class="card-text"><%=email%></p>
+                                </div>
+                                <div class="card-body d-grid gap-3">
+                                    <button type="button" class="btn btn-primary btn-block">Settings</button>
+                                    <button type="button" id="logout_button" class="btn btn-primary btn-block">Log out</button>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+    
+            </ul>
+    
         </div>
-      </nav>
-    <p>user: <%= username %> </p>
-    <div class="container">
-        <div class="row">
-            <div class="col" id="left">
-                <div id="planner" class="box"></div>
-                <button id="send" type="button" class="btn btn-primary btn-sm">Send</button>
-                <%let date=new Date(inizio_viaggio); %>
-                    <%while(date<=fine_viaggio){ %>
-                    <%    let d=date.getDate();     %>
-                    <%    let m=date.getMonth()+1;  %>
-                    <%    let y=date.getFullYear(); %>
-                    <div class="day"><h1><%=d%>/<%=m%>/<%=y%><h1></div>
-                    <%let newDate=date.setDate(date.getDate()+1); %>
-                    <%date=new Date(newDate);%>
-                    <%} %>
+    </nav>
+    <div id="container">
+            <div id="right">
+                <div id="map"></div>
             </div>
-            <div class="col" id="center">
+            <div id="center">
                 <div id="buttons">
-                    <button id="museums" type="button" class="btn btn-primary btn-sm" >Museum</button>
-                    <button id="foods" type="button" class="btn btn-primary btn-sm">Food</button>
-                    <button id="religion" type="button" class="btn btn-primary btn-sm">Church</button>
-                    <button id="natural" type="button" class="btn btn-primary btn-sm">Nature</button>
-                    <button id="architecture" type="button" class="btn btn-primary btn-sm">Architecture</button>
+                    <button id="museums" type="button" class="input_style_sm filter">Museum</button>
+                    <button id="foods" type="button" class="input_style_sm filter">Food</button>
+                    <button id="religion" type="button" class="input_style_sm filter">Church</button>
+                    <button id="natural" type="button" class="input_style_sm filter">Nature</button>
+                    <button id="architecture" type="button" class="input_style_sm filter">Architecture</button>
+                    <button id="accomodations" type="button" class="input_style_sm filter">Hotel</button>
                 </div>
                 <div id="info">
                 </div>
             </div>
-            <div class="col" id="right">
-                <div id="map"></div>
+            <div id="left" >
+                
+                <button id="send" type="button" class="input_style_sm"><i class="fa-solid fa-share"></i></button>
+                <button id="create" type="button" class="input_style_sm"><i class="fa-solid fa-circle-plus"></i></button>
+                 
+                <div id="days"><%if(id){for(const day of itinerary.data){%>
+                    <div class="day bg-dark"><div class="date d-flex justify-content-between align-items-center">
+                        <div class="d-flex align-items-center">
+                            <input type="date" class="input_style_sm my-1" oninput="getForecast(this)"><div class="text-start" onclick="showNotForecastPopup(this)" onmouseleave="hideNotForecastPopup(this)">
+                                <i class="fa-solid fa-circle-exclamation mx-2"></i>
+                                <span class="not_forecastPopup" style="visibility: hidden;">Previsioni Meteo non disponibili per questa data</span>
+                            </div>
+                        </div>
+                        <button value="off" type="button" onclick="showPOI(this)" class="show input_style_sm mx-1"></button>
+                        </div><%for(const pois of day.plan){ tag = tags.pop(); name = names.pop();%><div class="poi" draggable="true" style="border-left-color:<%=tag%>;"><div class="name"><%=name%></div><button onclick="this.parentElement.remove()" class="remove btn btn-light"></button><button onclick="clonePOI(this)" class="clone btn btn-light"></button><button onclick="showInfo(this)" class="infobtn btn btn-light"></button></div><%}%></div>
+                <%}}%></div>
+                
             </div>
-        </div>
     </div>
-
-
-
     <script src="../libraries/bootstrap.min.js"></script>
     <script src="../js/app.js"></script>
 </body>
