--- a/nginx/static/styles/style.css
+++ b/nginx/static/styles/style.css
@@ -33,12 +33,15 @@ html, body{
 }
 
 #right {
+    padding: 12px;
+    padding-right:20px;
     width: 100%;
     height: 50%;
     float:left;
 }
 
 #map {
+    border-radius: 5px;
     display: block;
     width: 100%;
     height: 100%;
@@ -245,18 +248,17 @@ html, body{
     border-left-style: solid;
     padding-left: 5px;
     background: rgb(250, 250, 250);
-    vertical-align: middle;
-    font-size: 120%;
 }
 .poi>button{
     aspect-ratio: 1/1;
-    height: 90%;
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
+    height: 95%;
     float: right;
     margin-right: 2px;
-    vertical-align: middle;
+}
+.poi>button>i{
+    position: absolute;
+    transform: translate(-50%, 100%);
+    font-size: 120%;
 }
 .name{
     position: absolute;
@@ -274,28 +276,20 @@ html, body{
     border-radius:5px;
 }
 
-.remove{
-    background-image: url(./icons/trash-fill.svg);
-}
-
-.clone{
-    background-image: url(./icons/plus-lg.svg);
-}
-
-.infobtn{
-    background-image: url(./icons/info-circle-fill.svg);
-}
 
 .show{
-    height: 100%;
+    width: 1%;
     aspect-ratio: 1/1;
-    background-image: url(./icons/eye-fill.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
     border-radius: 15px;
     float: right;
     background-color: rgb(150, 150, 150);
+    opacity: 0.8;
+    overflow: hidden;
+}
+.show>i{
+    position:absolute;
+    transform: translate(-49%, -50%);
+    font-size: 100%;
 }
 
 .w-icon{
