--- a/nginx/static/styles/style.css
+++ b/nginx/static/styles/style.css
@@ -9,7 +9,8 @@ html, body{
 }
 #container{
     position: absolute;
-    background-color: rgb(82, 82, 82);
+    background-color: #cad2d3;
+    
     background-position: top;
     height: 94.5vh;
     min-height: 25rem;
@@ -43,6 +44,7 @@ html, body{
 #map {
     border-radius: 5px;
     display: block;
+    box-shadow: 1px;
     width: 100%;
     height: 100%;
     position:relative;
